[package]
name = "jxr-to-jxl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
half = "2.4.1"
jpegxl-rs = { version = "0.11.1", features = ["vendored"] }
jpegxl-sys = "0.11.1"
jpegxr = "0.3.1"
